<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="RFM1">RF M1 Card</string>
    <string name="TypeAB">Type AB Card</string>
    <string name="UL">Ultralight Card</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_name">Card Dispenser</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth">Authenticate Sector</string>
    <string name="base">Basic Commands</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Establish Connection</string>
    <string name="connected">Connected</string>
    <string name="cpu">RF CPU</string>
    <string name="decrement">Decrement Value</string>
    <string name="deselect">Deselect</string>
    <string name="deviceconnect">Device Connection</string>
    <string name="disconnect">Disconnect</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="increment">Increment Value</string>
    <string name="ok">OK</string>
    <string name="read_type_a_uid">Read Type A Card Serial Number</string>
    <string name="readrawdata">Read Data</string>
    <string name="readuid">Read UID</string>
    <string name="readvalue">Read Value</string>
    <string name="search_menu_title">Search</string>
    <string name="select">Find Card</string>
    <string name="select_type_a">Find Type A Card</string>
    <string name="select_type_b">Find Type B Card</string>
    <string name="setvalue">Initialize Value</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strActivateErr">Activation Failed</string>
    <string name="strActive">Activate</string>
    <string name="strApduErr">APDU Data Exchange Failed</string>
    <string name="strBaudrate">Baud Rate:</string>
    <string name="strBlockData">Block Data (hex):</string>
    <string name="strBlockDataErr">Block data should be 16 bytes</string>
    <string name="strBlockFormat">Block data format error</string>
    <string name="strBlockNo">Block Number:</string>
    <string name="strBoxEmpty">Card Box Empty</string>
    <string name="strBoxNotEmpty">Card Box Has Cards</string>
    <string name="strBoxOK">Card Box Normal</string>
    <string name="strCardType">Card Type:</string>
    <string name="strCpuDeselect">Deselect Successful</string>
    <string name="strDataFormat">Data Format Error</string>
    <string name="strDeselect">Deselect</string>
    <string name="strDetectedRF">No RF Card Detected</string>
    <string name="strDeviceOK">Card Reader Idle</string>
    <string name="strDisEject">Dispense Card Outside</string>
    <string name="strDisOutlet">Dispense Card to Outlet</string>
    <string name="strDisReader">Dispense Card to Reading Position</string>
    <string name="strDispense">Card Dispensed Successfully</string>
    <string name="strDispenseErr">Card Dispense Error</string>
    <string name="strDispenseing">Dispensing Card</string>
    <string name="strEnableEntry">Enable Front-end Card Recycling</string>
    <string name="strErrPos">Card Not in Valid Position</string>
    <string name="strError">Error</string>
    <string name="strFindCard">Card Search Failed</string>
    <string name="strGetSerial">Failed to Get Card Serial Number</string>
    <string name="strGetVer">Get Version Number</string>
    <string name="strInExitGate">Card at Card Slot</string>
    <string name="strInReaderPos">Card in Reading Position</string>
    <string name="strKeyData">Key Data (hex):</string>
    <string name="strKeyErr">Key Error</string>
    <string name="strKeyLenErr">Key length is not 6 digits</string>
    <string name="strKeyType">Key Type:</string>
    <string name="strKeyerr">Key should be 6 bytes</string>
    <string name="strLanguage">Language</string>
    <string name="strNoCard">No Card Inside</string>
    <string name="strNoCardRecycle">No Card Recycled Due to Timeout</string>
    <string name="strNoData">No Data Entered</string>
    <string name="strNoInputKey">No Key Entered</string>
    <string name="strNotInExitGate">Card Not at Card Slot</string>
    <string name="strNotInReaderPos">Card Not in Reading Position</string>
    <string name="strOperate">Operation Failed</string>
    <string name="strParam">Parameter Error</string>
    <string name="strPort">Communication Port:</string>
    <string name="strPreEmpty">Card Box Almost Empty</string>
    <string name="strRead">Read Card</string>
    <string name="strReadErr">Read Data Error</string>
    <string name="strRecycle">Recycle Card</string>
    <string name="strRecycling">Recycling</string>
    <string name="strSector">Sector Number:</string>
    <string name="strSectorErr">Sector Number Error</string>
    <string name="strState">Get Card Reader Status</string>
    <string name="strSucceed">Operation Successful</string>
    <string name="strTimeOutRecycle">Card Recycled Due to Timeout</string>
    <string name="strTransmit">Execute</string>
    <string name="strULData">Data (4 bytes):</string>
    <string name="strValue">Value (hex):</string>
    <string name="strValuesErr">Block Data Format Error</string>
    <string name="strWrite">Write Card</string>
    <string name="strWriteErr">Write Data Error</string>
    <string name="update">Update Key A</string>
    <string name="writerawdata">Write Data</string>
</resources>