<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="top|left"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSector"/>
        <Spinner
            android:id="@+id/spinSector"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_weight="1"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textblock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strBlockNo"/>
        <Spinner
            android:id="@+id/spinblock"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnMf1Select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/select"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnMf1ReadUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/readuid"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/strKeyType"/>
            <Spinner
                android:id="@+id/spinMf1KeyTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="2"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/strKeyData"/>
            <EditText
                android:id="@+id/edtMf1KeyData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="2"
                android:digits="0123456789ABCDEF"
                android:layout_weight="1"
                android:inputType="textCapCharacters"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnMf1Auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/auth"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnMf1Update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/update"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/strBlockData"/>
            <EditText
                android:id="@+id/edtMf1RawData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="2"
                android:digits="0123456789ABCDEF"
                android:layout_weight="1"
                android:inputType="textCapCharacters"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnMf1Read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/readrawdata"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnMf1Write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/writerawdata"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/strValue"
                android:maxLength="15"/>
            <EditText
                android:id="@+id/edtMf1Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="2"
                android:maxLength="10"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnMf1IniValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/setvalue"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnMf1ReadValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/readvalue"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnMf1Increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/increment"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnMf1Decrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/decrement"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
