<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBlockNo"/>
            <Spinner
                android:id="@+id/spinBlockNo"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnUlFind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strULData"/>
            <EditText
                android:id="@+id/edtULData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:digits="0123456789ABCDEF"
                android:layout_weight="0.9"
                android:inputType="textCapCharacters"/>
            <Button
                android:id="@+id/btnWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strWrite"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strRead"
                android:layout_weight="0.94"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtApduResp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
