<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCardType"/>
        <Spinner
            android:id="@+id/spinType"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strActive"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnDeselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strDeselect"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ATR:"/>
        <TextView
            android:id="@+id/txtATR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C-APDU:"/>
        <Spinner
            android:id="@+id/spinApduCmds"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnTransmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/strTransmit"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtApduResp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
